# atlas-shared-app

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
atlas_shared_app/: __init__.py
atlas_shared_app/apis/: __init__.py  atlas_case_apis.py  atlas_configs_apis.py  atlas_document_apis.py  atlas_history_apis.py  atlas_remark_apis.py
atlas_shared_app/database/: __init__.py  atlas_asyncdb.py
atlas_shared_app/entities/: __init__.py  atlas_base_enums.py  atlas_base_model.py  atlas_case.py  atlas_client.py  atlas_configs.py  atlas_document.py  atlas_history.py  atlas_remark.py  atlas_subclient.py  atlas_user.py
atlas_shared_app/middlewares/: __init__.py  auth_middleware.py  request_context_middleware.py  security_headers_middleware.py
atlas_shared_app/repositories/: __init__.py  atlas_case_repository.py  atlas_configs_repository.py  atlas_document_repository.py  atlas_history_repository.py  atlas_remark_repository.py
atlas_shared_app/services/: __init__.py  atlas_case_service.py  atlas_configs_service.py  atlas_document_service.py  atlas_document_storage_service.py  atlas_history_service.py  atlas_remark_service.py  client_access.py
atlas_shared_app/settings/: __init__.py  atlas_case_settings.py  atlas_cors_settings.py  atlas_db_settings.py  atlas_document_settings.py  atlas_identity_settings.py  atlas_logging_settings.py  atlas_security_headers_settings.py  atlas_settings.py  atlas_throttling_settings.py  atlas_workflow_settings.py
atlas_shared_app/shared_services/: __init__.py  atlas_client_service.py  atlas_subclient_service.py  atlas_user_service.py
atlas_shared_app/utils/: __init__.py
tests/: __init__.py  conftest.py
tests/apis/: test_atlas_case_apis.py  test_atlas_configs_apis.py  test_atlas_document_apis.py  test_atlas_history_apis.py  test_atlas_remark_apis.py
tests/database/: test_atlas_asyncdb.py
tests/entities/: __init__.py
tests/middlewares/: test_auth_middleware.py  test_request_context_middleware.py  test_security_headers_middleware.py
tests/repositories/: __init__.py  test_atlas_case_repository.py  test_atlas_configs_repository.py  test_atlas_document_repository.py  (+2 more)
(+42 files in other folders)
